[package]
name = "stellar-overlay"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Development Foundation"]
description = "Process-isolated overlay for stellar-core"
license = "Apache-2.0"

[[bin]]
name = "stellar-overlay"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full", "signal"] }

# LRU cache for dedup
lru = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# libp2p for networking
# QUIC transport only - provides encryption (TLS 1.3), multiplexing, and stream independence
libp2p = { version = "0.54", features = ["tokio", "macros", "kad", "identify", "quic"] }
libp2p-stream = "0.2.0-alpha"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
blake2 = "0.10"
digest = "0.10"
sha2 = "0.10"

# Random
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
